--- a/style-projeto-jumpers.css
+++ b/style-projeto-jumpers.css
@@ -1,13 +1,12 @@
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
     /* border: 2px red solid; */
 }
-
-body {
-    background-color: #f2ebdc;
+body{
+    background-color: #f2ebdc;    
 }
 
 /* HEADER */
@@ -63,31 +62,39 @@ header ul li a:hover {
     height: 100px;
     padding-left: 50px;
 }
-
 /* FIM DO HEADER */
 
 
+.imagem1 {
+    background-image: linear-gradient(to bottom, transparent 0%, #0000009c 50%), url(src/ACJ1.jpeg);
+    background-size: 100% 110%;
+    background-position: top;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .imagem1 h1 {
-    position: absolute;
     text-align: center;
-    top: 45%;
-    left: 45%;
     color: #24bfa3;
     font-size: 45px;
 }
 
-.contatos-do-projeto h2 {
+
+.contatos-do-projeto h2{
     color: #24bfa3;
     text-align: center;
     font-size: 46px;
-
+    
 }
 
 .text {
-    margin: 8%;
+    margin: 5% 8%;
 }
 
-.text h2 {
+.text h2{
     font-size: 46px;
     text-transform: uppercase;
     color: #24bfa3;
@@ -101,11 +108,12 @@ header ul li a:hover {
 }
 
 .imagem-projeto {
+    
     display: flex;
-    justify-content: center;
+    justify-content: center;  
 }
 
-.imagem-projeto img {
+.imagem-projeto img{
     width: 600px;
     border-radius: 20px;
 }
@@ -114,20 +122,19 @@ header ul li a:hover {
     padding: 20px;
     font-family: "Inter", sans-serif;
 }
-
-.contatos-do-projeto .imgs {
+.contatos-do-projeto .imgs{
     display: flex;
     justify-content: center;
     align-items: center;
     /* width: 600px; */
 }
 
-.contatos-do-projeto .imgs img {
+.contatos-do-projeto .imgs img{
     border-radius: 50%;
     width: 70px;
     height: 70px;
     justify-content: baseline;
-    padding: 40px;
+    padding: 40px;   
 }
 
 .icons-redes {
@@ -235,14 +242,13 @@ i {
     display: flex;
     align-items: center;
 }
-
 /* -------------------------------MODO ESCURO------------------------------ */
 
 .dark-theme {
     background-color: #333333;
 }
 
-.dark-theme .fa-brands {
+.dark-theme .fa-brands{
     color: #f2ebdc;
 }
 
@@ -259,7 +265,7 @@ i {
     color: #000;
 }
 
-.dark-theme header ul li a:hover {
+.dark-theme header ul li a:hover{
     background-color: #f2ebdc;
     color: #333333;
     border-radius: 20px;
@@ -270,11 +276,11 @@ i {
     color: #f2ebdc;
 }
 
-.dark-theme .text h2 {
+.dark-theme .text h2{
     color: #80bfb4;
 }
 
-.dark-theme footer {
+.dark-theme footer{
     background-color: #1b7070;
 }
 
@@ -282,11 +288,11 @@ i {
     color: #f2ebdc;
 }
 
-.dark-theme footer h2 {
+.dark-theme footer h2{
     color: #f2ebdc;
 }
 
-.dark-theme footer ul li a {
+.dark-theme footer ul li a{
     color: #f2ebdc;
 }
 
@@ -295,16 +301,16 @@ i {
 .checkbox-wrapper-54 input[type="checkbox"] {
     visibility: hidden;
     display: none;
-}
+  }
 
-.checkbox-wrapper-54 *,
-.checkbox-wrapper-54 ::after,
-.checkbox-wrapper-54 ::before {
+  .checkbox-wrapper-54 *,
+  .checkbox-wrapper-54 ::after,
+  .checkbox-wrapper-54 ::before {
     box-sizing: border-box;
-}
+  }
 
-/* The switch - the box around the slider */
-.checkbox-wrapper-54 .switch {
+  /* The switch - the box around the slider */
+  .checkbox-wrapper-54 .switch {
     --width-of-switch: 3.5em;
     --height-of-switch: 2em;
     /* size of sliding icon -- sun and moon */
@@ -315,10 +321,10 @@ i {
     width: var(--width-of-switch);
     height: var(--height-of-switch);
     display: inline-block;
-}
+  }
 
-/* The slider */
-.checkbox-wrapper-54 .slider {
+  /* The slider */
+  .checkbox-wrapper-54 .slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -328,36 +334,36 @@ i {
     background-color: #f4f4f5;
     transition: .4s;
     border-radius: 30px;
-}
+  }
 
-.checkbox-wrapper-54 .slider:before {
+  .checkbox-wrapper-54 .slider:before {
     position: absolute;
     content: "";
-    height: var(--size-of-icon, 1.4em);
-    width: var(--size-of-icon, 1.4em);
+    height: var(--size-of-icon,1.4em);
+    width: var(--size-of-icon,1.4em);
     border-radius: 20px;
-    left: var(--slider-offset, 0.3em);
+    left: var(--slider-offset,0.3em);
     top: 50%;
     transform: translateY(-50%);
-    background: linear-gradient(40deg, #ff0080, #ff8c00 70%);
+    background: linear-gradient(40deg,#ff0080,#ff8c00 70%);
     ;
-    transition: .4s;
-}
+   transition: .4s;
+  }
 
-.checkbox-wrapper-54 input:checked+.slider {
+  .checkbox-wrapper-54 input:checked + .slider {
     background-color: #303136;
-}
+  }
 
-.checkbox-wrapper-54 input:checked+.slider:before {
-    left: calc(100% - (var(--size-of-icon, 1.4em) + var(--slider-offset, 0.3em)));
+  .checkbox-wrapper-54 input:checked + .slider:before {
+    left: calc(100% - (var(--size-of-icon,1.4em) + var(--slider-offset,0.3em)));
     background: #303136;
     /* change the value of second inset in box-shadow to change the angle and direction of the moon  */
     box-shadow: inset -3px -2px 5px -2px #8983f7, inset -10px -4px 0 0 #a3dafb;
-}
+  }
 
 
-/* Responsividade Página Projeto */
-@media (max-width: 768px) {
+  /* Responsividade Página Projeto */
+  @media (max-width: 768px) {
 
     /* HEADER */
     header {
@@ -379,11 +385,25 @@ i {
         justify-content: space-between;
     }
 
-    .text h2{
-        font-size: 45px;
+    /* FIM DO HEADER */
+
+    /* IMAGEM DO PROJETO*/
+    .img-projeto img{
+        width: 280px;
+        height: 230px;
+        margin-left: 95px;
     }
 
-    /* FIM DO HEADER */
+    .imagem1 {
+        background-image: linear-gradient(to bottom, transparent 0%, #0000009c 50%), url(src/ACJ1.jpeg);
+        background-size: 100% 110%;
+        background-position: top;
+        height: 50vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    /* FIM DA IMAGEM DO PROJETO */
 
     /* MENU HAMBURGUER */
 
@@ -497,4 +517,8 @@ i {
     }
 
     /* final footer */
+
+    .text h2{
+        font-size: 45px;
+    }
 }
