--- a/style-sobre.css
+++ b/style-sobre.css
@@ -88,12 +88,14 @@ header ul li a:hover {
     font-size: 46px;
     text-transform: uppercase;
     color: #24bfa3;
+    text-align: center;
+    padding: 20px;
 }
 
 .text p {
     font-family: 'noto sans';
-    font-size: 16px;
-
+    font-size: 20px;
+    line-height: 1.4em;
 }
 
 p {
@@ -131,7 +133,7 @@ p {
 }
 
 .profiles img {
-    max-width: 150px;
+    width: 150px;
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
@@ -316,7 +318,7 @@ i {
     color: #f2ebdc;
 }
 
-.dark-theme .cards {
+.dark-theme .profiles {
     background-color: #5f9b90;
 }
 
@@ -383,4 +385,169 @@ i {
     background: #303136;
     /* change the value of second inset in box-shadow to change the angle and direction of the moon  */
     box-shadow: inset -3px -2px 5px -2px #8983f7, inset -10px -4px 0 0 #a3dafb;
+}
+
+@media (max-width: 768px) {
+
+    /* HEADER */
+    header {
+        display: flex;
+        width: 100%;
+        height: 150px;
+        font-size: 14px;
+    }
+
+    header ul li {
+        padding: 10px;
+    }
+
+    header ul li a {
+        font-size: 13px;
+    }
+
+    nav {
+        justify-content: space-between;
+    }
+    
+    .text h2{
+        font-size: 45px;
+    }
+
+    /* FIM DO HEADER */
+
+    .img-quemsomos{
+        width: 300px;
+    }
+
+    /* MENU HAMBURGUER */
+
+
+    .menu{
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        padding: 5px;
+    }
+
+    .menu.active{
+        display: flex;
+    }
+        
+
+    .menu-hamburguer {
+        display: block;
+        cursor: pointer;
+        margin-right: 50px;
+        margin-top: 40px;
+    }
+    
+    .menu-bar {
+        display: flex;
+        width: 25px;
+        height: 2px;
+        background-color: #fff;
+        margin: 5px;
+    }
+
+    
+
+    .main {
+        display: block;
+    }
+
+    .imagens img {
+        width: 300px;
+        height: auto;
+    }
+
+    .imagens {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .objetivos {
+        flex-wrap: wrap;
+    }
+
+    .logo {
+        width: 115px;
+        height: auto;
+        margin-left: -20px;
+        margin-right: 30px;
+    }
+
+    .valores {
+        display: block;
+    }
+
+    .icons a i {
+        font-size: 30px;
+        margin-top: 10px;
+        padding: 5px;
+        color: #000;
+    }
+
+    .profiles {
+        margin: 2%;
+        background-color: #b0d9cd;
+        border-radius: 20px;
+        padding: 20px;
+    }
+
+    .profiles img {
+        flex-wrap: wrap;
+        max-width: 100px;
+        height: 100px;
+    }
+    
+    
+/* footer */
+    .global-footer {
+        align-items: center;
+        justify-content: center;
+        flex-direction: column; 
+    }
+
+    .content-footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        margin: 0 5%;
+        width: 100%;
+    }
+    
+    .redes-sociais ul {
+        display: flex;
+        margin-top: 10px;
+    }
+    
+    .redes-sociais ul h2 {
+        display: none;
+    }
+    
+    .redes-sociais ul li {
+        display: none;
+    }
+    
+    .content-footer ul li a {
+        font-size: 15px;
+        padding: 10px;
+    }
+
+    .content-footer ul h2 {
+        font-size: 18px;
+    }
+
+    .logo-footer {
+        display: none;
+    }
+
+    .insta, .face, .tik {
+        padding: 10px;
+    }
+
+    /* final footer */
 }
